--- a/laokou-service/laokou-auth/src/main/resources/templates/zfb_loading.html
+++ b/laokou-service/laokou-auth/src/main/resources/templates/zfb_loading.html
@@ -7,8 +7,8 @@
 <body>
 </body>
 <script>
+    let queryAttr = window.location.search
     let accessToken = ""
-    let redirectUrl = ""
     if (queryAttr.length > 0) {
         queryAttr = queryAttr.substring(1)
         let data = queryAttr.split("&")
@@ -20,15 +20,12 @@
             if (queryData[0] == "zfb_openid") {
                 localStorage.setItem("zfb_openid",queryData[1]);
             }
-            if (queryData[0] == "redirect_url") {
-                redirectUrl = queryData[1]
-            }
         }
     }
-    if (accessToken != null) {
-        location.href = "/?"
+    if (accessToken != "") {
+        location.href = "http://175.178.69.253/laokou/auth/sys/auth/api/zfbBind?Authorization=" + accessToken + "&zfb_openid=" + localStorage.getItem("zfb_openid")
     } else {
-        location.href = redirectUrl
+        location.href = "http://175.178.69.253/oauth2/login.html?redirect_url=http://175.178.69.253/oauth2/zfb/zfb_loading.html"
     }
 </script>
 </html>
