--- a/laokou-cloud/laokou-sentinel/src/main/webapp/resources/app/views/dashboard/main.html
+++ b/laokou-cloud/laokou-sentinel/src/main/webapp/resources/app/views/dashboard/main.html
@@ -3,8 +3,8 @@
   <header></header>
   <!-- /.navbar-top-links -->
   <!-- /.navbar-static-side -->
-  <div id="page-wrapper">
+  <div id="pageQuery-wrapper">
     <div ui-view></div>
   </div>
-  <!-- /#page-wrapper -->
+  <!-- /#pageQuery-wrapper -->
 </div>
