feat: 提交首页统计【完成总览】

--- a/ui/src/pages/Home/index.less
+++ b/ui/src/pages/Home/index.less
@@ -1,3 +1,27 @@
-.container {
-	padding-top: 80px;
+.pro-card {
+
+	& .pro-card-header {
+
+		border-bottom: 1px solid  #eee;
+		height: 85px;
+
+		& .pro-card-title {
+			vertical-align: inherit;
+			font-size: 14px;
+		}
+
+		& .pro-card-content {
+			font-size: 35px;
+			font-weight: bolder;
+		}
+
+	}
+
+	& .pro-card-footer {
+		margin-top: 10px;
+	}
+
+	height: 150px;
+	color: #000000a3;
+
 }
