--- a/ui/src/pages/Home/index.less
+++ b/ui/src/pages/Home/index.less
@@ -1,27 +1,32 @@
-.pro-card {
+.pro-card-1 {
 
-	& .pro-card-header {
+	& .pro-card-1-header {
 
 		border-bottom: 1px solid  #eee;
 		height: 85px;
 
-		& .pro-card-title {
+		& .pro-card-1-title {
 			vertical-align: inherit;
 			font-size: 14px;
 		}
 
-		& .pro-card-content {
+		& .pro-card-1-content {
 			font-size: 35px;
 			font-weight: bolder;
 		}
 
 	}
 
-	& .pro-card-footer {
+	& .pro-card-1-footer {
 		margin-top: 10px;
 	}
 
 	height: 150px;
 	color: #000000a3;
 
+}
+
+.pro-card-2 {
+	margin-top: 10px;
+	padding: 0;
 }
