fix：修改首页chart图表不适配页面问题

--- a/ui/src/pages/Home/index.less
+++ b/ui/src/pages/Home/index.less
@@ -36,3 +36,14 @@
 	width: 100%;
 	height: 600px;
 }
+
+.ant-pro-card .ant-pro-card-body-center div:nth-child(1) {
+	position: relative;
+	height: 500px !important;
+}
+.ant-pro-card .ant-pro-card-body-center div:nth-child(1) .g2-tooltip-title{
+	height: 40px !important;
+}
+.ant-pro-card-body canvas{
+	position: absolute;
+}
