--- a/ui/src/pages/Home/index.less
+++ b/ui/src/pages/Home/index.less
@@ -29,19 +29,18 @@
 .pro-card-2 {
 	margin-top: 10px;
 	padding: 0;
-
+	position: relative;
+	height: 500px !important;
 }
 
 .pro-card-3 {
+	margin-top: 10px;
+	padding: 0;
 	width: 100%;
 	height: 600px;
 }
 
-.ant-pro-card .ant-pro-card-body-center div:nth-child(1) {
-	position: relative;
-	height: 500px !important;
-}
-.ant-pro-card .ant-pro-card-body-center div:nth-child(1) .g2-tooltip-title{
+.pro-card-2 .g2-tooltip-title{
 	height: 40px !important;
 }
 .ant-pro-card-body canvas{
